- lib: Support `HOUSE`, `INDUSTRY` and `CARGO` features in `DisableDefault`.

- grftopy: Fix missing sprite zoom
- grftopy: Improve decoding of industry layouts.
- grftopy: Fix decompilation of ActionB.
- grftopy: Fix decompilation of action 7/9 with value > 4 bytes.
- grftopy: Add -p/--palette cli option to set output palette for 8bpp images.
---------
0.2.2
---------

- Change license to GPL v2+ (same as nml) instead of v3 to allow reusing v2 code/resources.
- Fix graphics sprite composition.
- Fix Train weight Action 0 properties (low and high bytes).
- Fix compilation of generic var parameter in Action 2.
- Fix `var(...)` call in `Switch` code not accepting `param` value without parentheses.
- Fix default purchase sprite for auto-articulated trains.

- Rename `speed` Action 0 property for ships to `max_speed` for consinstency with other vehile types.
- Rename Action 0 ship properties to match nml:
	- `cargo_type` to `default_cargo_type`
	- `sound` to `sound_effect`
	- `ocean_speed` to `ocean_speed_fraction`
	- `canal_speed` to `canal_speed_fraction`
	- `flags` to `misc_flags`
	- `refit_classes` to `refittable_cargo_classes`
	- `non_refit_classes` to `non_refittable_cargo_classes`
- Add `id_map_file` parameter to `BaseNewGRF` constructor and `reserve_ids` and `resolve_id` methods to manage auto-assigned (string) IDs.
- Use `AlternativeSprites` instead of sprite tuples.
- Add Action0 properties for road types.
- Add `NewGRF.add_railtype` to add railtypes one-by-one.
- Add `VEHICLE_NEVER_EXPIRES` constant.
- Add `AIFlags` and `TrainRunningCost` enums.
- Add `Flags`, `AIFlags`, `RuningCost` enums for Trains.
- Add `Palette` enum.
- Add `Train.hp` and `Train.ton` methods for converting metric units.
- Add visual effect constants and methods.
- Make `NewGRF.bind` to make a subclass of the type instead of function and expose `bound_newgrf` property.
- Change Switch parameter order from to `code, ranges, default`.